docs/api/qiskit-ibm-runtime/0.47/schema-common.mdx
---
title: common (v0.47)
description: API reference for ibm_quantum_schemas.common in qiskit-ibm-runtime v0.47
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: ibm_quantum_schemas.common
---

<span id="common-models-ibm-quantum-schemas-common" />

<span id="module-ibm_quantum_schemas.common" />

# Common models

`ibm_quantum_schemas.common`

Models that provide common functionality.

## Classes

|                                                                                                                                                                           |                                                                                 |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------- |
| [`QpyDataModel`](/docs/api/qiskit-ibm-runtime/0.47/ibm-quantum-schemas-common-qpy-data-model "ibm_quantum_schemas.common.QpyDataModel")                                   | QPY-encoded Qiskit objects.                                                     |
| [`QpyDataV13ToV17Model`](/docs/api/qiskit-ibm-runtime/0.47/ibm-quantum-schemas-common-qpy-data-v13-to-v17-model "ibm_quantum_schemas.common.QpyDataV13ToV17Model")        | QPY encoded circuit list with restricted version range.                         |
| [`QpyModel`](/docs/api/qiskit-ibm-runtime/0.47/ibm-quantum-schemas-common-qpy-model "ibm_quantum_schemas.common.QpyModel")                                                | A QPY-encoded quantum circuit.                                                  |
| [`QpyModelV13ToV16`](/docs/api/qiskit-ibm-runtime/0.47/ibm-quantum-schemas-common-qpy-model-v13-to-v16 "ibm_quantum_schemas.common.QpyModelV13ToV16")                     | QPY encoded circuits with restricted version range.                             |
| [`QpyModelV13ToV17`](/docs/api/qiskit-ibm-runtime/0.47/ibm-quantum-schemas-common-qpy-model-v13-to-v17 "ibm_quantum_schemas.common.QpyModelV13ToV17")                     | QPY encoded circuits with restricted version range.                             |
| [`BaseParamsModel`](/docs/api/qiskit-ibm-runtime/0.47/ibm-quantum-schemas-common-base-params-model "ibm_quantum_schemas.common.BaseParamsModel")                          | Model of a runtime program's inner parameters.                                  |
| [`PauliLindbladMapModel`](/docs/api/qiskit-ibm-runtime/0.47/ibm-quantum-schemas-common-pauli-lindblad-map-model "ibm_quantum_schemas.common.PauliLindbladMapModel")       | Encoding of a sparse Pauli Lindblad map.                                        |
| [`SamplexModel`](/docs/api/qiskit-ibm-runtime/0.47/ibm-quantum-schemas-common-samplex-model "ibm_quantum_schemas.common.SamplexModel")                                    | A QPY-encoded quantum circuit.                                                  |
| [`SamplexModelSSV1`](/docs/api/qiskit-ibm-runtime/0.47/ibm-quantum-schemas-common-samplex-model-ssv-1 "ibm_quantum_schemas.common.SamplexModelSSV1")                      | A samplex model constrained to use samplex serialization version (SSV) 1.       |
| [`SamplexModelSSV1ToSSV2`](/docs/api/qiskit-ibm-runtime/0.47/ibm-quantum-schemas-common-samplex-model-ssv-1-to-ssv-2 "ibm_quantum_schemas.common.SamplexModelSSV1ToSSV2") | A samplex model constrained to use samplex serialization versions (SSV) 1 or 2. |
| [`TensorModel`](/docs/api/qiskit-ibm-runtime/0.47/ibm-quantum-schemas-common-tensor-model "ibm_quantum_schemas.common.TensorModel")                                       | Model of tensor data.                                                           |
| [`F64TensorModel`](/docs/api/qiskit-ibm-runtime/0.47/ibm-quantum-schemas-common-f-64-tensor-model "ibm_quantum_schemas.common.F64TensorModel")                            | Model of tensor data specialized to f64.                                        |

